Bug 1240437: Implement PushLayer and PopLayer for DrawTargetRecording. r=bas, a=lizzard